fix quote text overflow

--- a/layouts/profile/style.css
+++ b/layouts/profile/style.css
@@ -219,6 +219,8 @@ span.tweet-body-text {
 .tweet-body-text-quote {
     display: flow-root;
     color: var(--almost-black);
+}
+.tweet-body {
     min-width: 490px;
 }
 .tweet-body-text-quote {
